# Algorithms-in-Rust

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
src/base/: inversion.rs  mod.rs  search.rs  subset_generator.rs
src/ds/: disjoint_set.rs  fenwick_tree.rs  mod.rs  monotonic_queue.rs  prefix_sum.rs  sparse_table.rs
src/graph/: directed_graph.rs  mod.rs  mst.rs
src/graph/structs/: mod.rs
src/math/: mod.rs  number_theory.rs  real.rs
src/math/number_theory/: function.rs  gcd.rs  mod.rs  prime.rs  solve.rs
tests/: integration_test.rs
